internal/gatewayapi/testdata/extensions/extension-server-policy-cross-namespace-targetselector-valid-referencegrant-gateway-target.in.yaml
gateways:
- apiVersion: gateway.networking.k8s.io/v1
  kind: Gateway
  metadata:
    namespace: gateway-ns
    name: test-gateway
    labels:
      team: blue
  spec:
    gatewayClassName: envoy-gateway-class
    listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              team: blue
httpRoutes:
- apiVersion: gateway.networking.k8s.io/v1
  kind: HTTPRoute
  metadata:
    namespace: route-ns
    name: test-route
  spec:
    parentRefs:
    - name: test-gateway
      namespace: gateway-ns
      sectionName: http
    rules:
    - matches:
      - path:
          value: /
      backendRefs:
      - name: backend
        port: 8080
extensionServerPolicies:
- apiVersion: foo.example.io/v1alpha1
  kind: Bar
  metadata:
    namespace: policy-ns
    name: cross-ns-selector-policy
  spec:
    targetSelectors:
    - group: gateway.networking.k8s.io
      kind: Gateway
      namespaces:
        from: Selector
        selector:
          matchLabels:
            team: blue
      matchLabels:
        team: blue
namespaces:
- apiVersion: v1
  kind: Namespace
  metadata:
    name: gateway-ns
    labels:
      team: blue
- apiVersion: v1
  kind: Namespace
  metadata:
    name: route-ns
    labels:
      team: blue
referenceGrants:
- apiVersion: gateway.networking.k8s.io/v1beta1
  kind: ReferenceGrant
  metadata:
    namespace: gateway-ns
    name: allow-selector-extpolicy
  spec:
    from:
    - group: foo.example.io
      kind: Bar
      namespace: policy-ns
    to:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: test-gateway
services:
- apiVersion: v1
  kind: Service
  metadata:
    namespace: route-ns
    name: backend
  spec:
    ports:
    - port: 8080
      name: http
      protocol: TCP
endpointSlices:
- apiVersion: discovery.k8s.io/v1
  kind: EndpointSlice
  metadata:
    name: endpointslice-backend
    namespace: route-ns
    labels:
      kubernetes.io/service-name: backend
  addressType: IPv4
  ports:
  - name: http
    protocol: TCP
    port: 8080
  endpoints:
  - addresses:
    - 8.8.4.4
    conditions:
      ready: true
