internal/gatewayapi/testdata/extensions/extension-server-policy-cross-namespace-targetselector-valid-referencegrant-gateway-target.out.yaml
extensionServerPolicies:
- apiVersion: foo.example.io/v1alpha1
  kind: Bar
  metadata:
    name: cross-ns-selector-policy
    namespace: policy-ns
  spec:
    targetSelectors:
    - group: gateway.networking.k8s.io
      kind: Gateway
      matchLabels:
        team: blue
      namespaces:
        from: Selector
        selector:
          matchLabels:
            team: blue
  status:
    ancestors:
    - ancestorRef:
        group: gateway.networking.k8s.io
        kind: Gateway
        name: test-gateway
        namespace: gateway-ns
      conditions:
      - lastTransitionTime: null
        message: Policy has been accepted.
        reason: Accepted
        status: "True"
        type: Accepted
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
gateways:
- apiVersion: gateway.networking.k8s.io/v1
  kind: Gateway
  metadata:
    labels:
      team: blue
    name: test-gateway
    namespace: gateway-ns
  spec:
    gatewayClassName: envoy-gateway-class
    listeners:
    - allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              team: blue
      name: http
      port: 80
      protocol: HTTP
  status:
    listeners:
    - attachedRoutes: 1
      conditions:
      - lastTransitionTime: null
        message: Sending translated listener configuration to the data plane
        reason: Programmed
        status: "True"
        type: Programmed
      - lastTransitionTime: null
        message: Listener has been successfully translated
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Listener references have been resolved
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      name: http
      supportedKinds:
      - group: gateway.networking.k8s.io
        kind: HTTPRoute
      - group: gateway.networking.k8s.io
        kind: GRPCRoute
httpRoutes:
- apiVersion: gateway.networking.k8s.io/v1
  kind: HTTPRoute
  metadata:
    name: test-route
    namespace: route-ns
  spec:
    parentRefs:
    - name: test-gateway
      namespace: gateway-ns
      sectionName: http
    rules:
    - backendRefs:
      - name: backend
        port: 8080
      matches:
      - path:
          value: /
  status:
    parents:
    - conditions:
      - lastTransitionTime: null
        message: Route is accepted
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Resolved all the Object references for the Route
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
      parentRef:
        name: test-gateway
        namespace: gateway-ns
        sectionName: http
infraIR:
  gateway-ns/test-gateway:
    proxy:
      listeners:
      - name: gateway-ns/test-gateway/http
        ports:
        - containerPort: 10080
          name: http-80
          protocol: HTTP
          servicePort: 80
      metadata:
        labels:
          gateway.envoyproxy.io/owning-gateway-name: test-gateway
          gateway.envoyproxy.io/owning-gateway-namespace: gateway-ns
        ownerReference:
          kind: GatewayClass
          name: envoy-gateway-class
      name: gateway-ns/test-gateway
      namespace: ""
xdsIR:
  gateway-ns/test-gateway:
    accessLog:
      json:
      - path: /dev/stdout
    extensionResources:
    - name: foo.example.io/bar/policy-ns/cross-ns-selector-policy
      object:
        apiVersion: foo.example.io/v1alpha1
        kind: Bar
        metadata:
          name: cross-ns-selector-policy
          namespace: policy-ns
        spec:
          targetSelectors:
          - group: gateway.networking.k8s.io
            kind: Gateway
            matchLabels:
              team: blue
            namespaces:
              from: Selector
              selector:
                matchLabels:
                  team: blue
        status:
          ancestors:
          - ancestorRef:
              group: gateway.networking.k8s.io
              kind: Gateway
              name: test-gateway
              namespace: gateway-ns
            conditions:
            - lastTransitionTime: null
              message: Policy has been accepted.
              reason: Accepted
              status: "True"
              type: Accepted
            controllerName: gateway.envoyproxy.io/gatewayclass-controller
    extensionServerPolicies:
    - name: foo.example.io/bar/policy-ns/cross-ns-selector-policy
    globalResources:
      proxyServiceCluster:
        metadata:
          kind: Service
          name: envoy-gateway-ns-test-gateway-85a70075
          sectionName: "8080"
        name: gateway-ns/test-gateway
        settings:
        - addressType: IP
          endpoints:
          - host: 7.6.5.4
            port: 8080
            zone: zone1
          metadata:
            kind: Service
            name: envoy-gateway-ns-test-gateway-85a70075
            sectionName: "8080"
          name: gateway-ns/test-gateway
          protocol: TCP
    http:
    - address: 0.0.0.0
      extensionRefs:
      - name: foo.example.io/bar/policy-ns/cross-ns-selector-policy
      externalPort: 80
      hostnames:
      - '*'
      metadata:
        kind: Gateway
        name: test-gateway
        namespace: gateway-ns
        sectionName: http
      name: gateway-ns/test-gateway/http
      path:
        escapedSlashesAction: UnescapeAndRedirect
        mergeSlashes: true
      port: 10080
      routes:
      - destination:
          metadata:
            kind: HTTPRoute
            name: test-route
            namespace: route-ns
          name: httproute/route-ns/test-route/rule/0
          settings:
          - addressType: IP
            endpoints:
            - host: 8.8.4.4
              port: 8080
            metadata:
              kind: Service
              name: backend
              namespace: route-ns
              sectionName: "8080"
            name: httproute/route-ns/test-route/rule/0/backend/0
            protocol: HTTP
            weight: 1
        hostname: '*'
        isHTTP2: false
        metadata:
          kind: HTTPRoute
          name: test-route
          namespace: route-ns
        name: httproute/route-ns/test-route/rule/0/match/0/*
        pathMatch:
          distinct: false
          name: ""
          prefix: /
    readyListener:
      address: 0.0.0.0
      ipFamily: IPv4
      path: /ready
      port: 19003
